@@ -36,6 +36,9 @@ is done in a separate thread. -- still work in progress --).
 -Now clear metadata on stream stop (including buffer %).
 -more internal refactoring...
 0.35-pre5
+(sandberg)-Added button support to the 3D UI so it shows play/stop/pause.
+(sandberg)-Added hprm (headphone remote control) support to PSPRadio. The keys are mapped to that forward/back
+maps to Rtrigger/LTrigger. The Play/Pause button will start playing when stopped and stop when playing.
 
 
 
